{{$NEXT}}

0.18     2012-02-18

- Require Package::Stash 0.14+. Fixes RT #75095. Reported by Zefram.

0.17     2012-02-12

- A bug in Class::Load caused test failures when Module::Runtime 0.012 was
  used with Perl 5.8.x. Reported by Zefram. RT #74897. ( Jesse Luehrs )

0.16     2012-02-12

- Require Module::Runtime 0.012, which has a number of useful bug fixes.

0.15     2012-02-08

- Small test changes to accomodate latest version of
  Module::Implementation. There's no need to upgrade if you're already using
  0.14

0.14     2012-02-06

- Use Module::Implementation to handle loading the XS or PP versions of the
  code. Using this module fixes a few bugs.

- Under taint mode, setting an implementation in the CLASS_LOAD_IMPLEMENTATION
  env var caused a taint error.

- An invalid value in the CLASS_LOAD_IMPLEMENTATION env var is now detected
  and reported immediately. No attempt is made to load an invalid
  implementation.

0.13     2011-12-22

- Fix some bugs with our use of Try::Tiny. This could cause warnings on some
  systems with Class::Load::XS wasn't installed. Fixes RT #72345.

0.12     2011-10-25

- Depend on Module::Runtime 0.011+. This fixes problems with Catalyst under
  Perl 5.8 and 5.10.

0.11     2011-10-04

- Don't accept package names that start with a digit. ( Jesse Luehrs )

- Rewrote some of the guts to use Module::Runtime, rather than reimplementing
  its functionality. ( Jesse Luehrs )

0.10     2011-09-06

- Make sure the $@ localization doesn't hide errors - invalid module name
  errors were being suppressed on perls before 5.14. ( Jesse Luehrs )

0.09     2011-09-05

- Fix is_class_loaded to ignore $ISA (but still look for @ISA) when trying to
  determine whether a class is loaded. ( Jesse Luehrs )

- Lots of internals cleanup. ( Jesse Luehrs )

0.08     2011-08-15

- The previous version was missing a prereq declaration for
  Data::OptList. Reported by Daisuke Maki and Mark Hedges. RT #70285.

0.07     2011-08-15
